--- a/data/process_data.ipynb
+++ b/data/process_data.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = 'attn_vis_data.json'\n",
-    "out_prefix = 'machine'"
+    "data_path = 'human_attn_vis_data.json'\n",
+    "out_prefix = 'human'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
