--- a/data/process_human.ipynb
+++ b/data/process_human.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -44,25 +44,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import spacy\n",
-    "nlp = spacy.load('en')"
+    "nlp = spacy.load('en_core_web_lg')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +144,7 @@
     "            similarity = h_sent.similarity(a_sent)\n",
     "            sentence_similarities[human_index][article_index] = similarity\n",
     "        \n",
-    "    sentence_similarities = softmax(sentence_similarities, theta=5, axis=1)\n",
+    "    sentence_similarities = softmax(sentence_similarities, theta=20, axis=1)\n",
     "    return sentence_similarities\n",
     "    "
    ]
@@ -166,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +208,7 @@
     "    \n",
     "                    row = human_rows[human_index][human_tok_index]\n",
     "                    column = article_columns[article_index][article_tok_index]\n",
-    "                    weights[row][column] = weight                  \n",
+    "                    weights[row][column] = sentence_sim                  \n",
     "                  \n",
     "    weights = softmax(weights, theta=100, axis=1)\n",
     "    \n",
@@ -225,13 +217,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "for k, example in enumerate(data[:1]):\n",
-    "    article_str = \"The critically acclaimed show -- in which the women stamp, dance, shout, swear, punch, and even crowd surf -- was partly inspired by Ambreen Sadiq, a former UK national champion, and one of Britain's first Muslim female boxers. Her journey to success wasn't easy -- as a victim of bullying at the age of 13 she found respite in boxing after being introduced to it by her father and brother. \\\"I got bullied quite a lot growing up, my dad's Pakistani and my mum's Portuguese,\\\" Sadiq told CNN. \\\"I got stick from both sides, from white and black people. I felt like I wasn't accepted. I used to move schools so many times just to feel accepted. \\\"People would stay stuff about how I looked... everyone said that's a boy's sport, what are you doing that for? You're going to look like a man, like a transsexual. \\\"I was bullied from such a young age, I felt like it was never going to stop. Boxing helped me to control that anger.\\\" It was a transformative experience for Sadiq -- she went from being quiet, having few friends and getting into fights to plucking up courage to start conversations, and thereby build self confidence. \\\"Instead of punching someone in the face I'd punch the bag,\\\" she added. \\\"If anyone came up to me and said anything I could just walk away from it -- whereas before I'd just straight punch them in the face or something. So it's helped me a lot with discipline.\\\" It's sometimes hard to imagine Sadiq as a boxer -- her movements are calm and assured, and a kind smile is never far from her lips. \\\"Boxing has made me the person I am today, and I'm so proud of the person I am,\\\" said the 20-year-old trailblazer, who is now looked up to by girls from all kinds of communities wanting to follow in her footsteps. \\\"I've had a lot of girls -- not just Asian girls -- coming up to me and asking, how do you stop people saying it's a boy's sport? How can you convince your parents to let you box?\\\" While boxing for many is just a sport -- albeit a violent one -- when it comes to women and Muslims participating it can feel more like a cause, with Sadiq often finding herself explaining her motivation to girls. \\\"What's the difference if a boy boxes or if a girl boxes? When we're in that ring we look like boxers -- we don't look like a girl or a boy. \\\"You come into that gym, you come into that show, you come into that ring thinking I'm a boxer, not that I'm a girl or I'm a boy.\\\" The role of Nicola Adams -- the first ever female boxer to win an Olympic gold medal -- has also been key in the fight for acceptance. Sadiq tells the story of how several years ago her coach Alwyn Belcher, who also worked with Adams, originally refused to train women -- that is, until he turned up to coach the GB team (believing they'd be men) only to find an enthusiastic bunch of women ready to work. \\\"That's the day he met Nicola Adams,\\\" recalls Sadiq with a laugh. \\\"He said from that day he thought girls were better boxers -- because they like to listen.\\\" Since Adams' success at the Olympic Games, females boxing once a week increased by 79% according to a 2013 Sport England study, but even the production of \\\"No Guts, No Heart, No Glory\\\" highlighted the barriers women potentially face. Cast member and aspiring medical student Freyaa Ali said there was a girl who had wanted to participate in the show, but was ultimately prevented from doing so by her relatives. \\\"It wasn't even the boxing and it wasn't even the speech, it was the dancing we do in the ring. I'm incredibly lucky to be able to do this, and I was just so sad for her. You know there are certain women out there who can't do what we're doing right now.\\\" \\\"I think that's what makes me even more passionate about doing this -- we want to give them a voice and give them a reason, so they know they can have confidence to do stuff like this.\\\" If women do feel restricted by their religion or gender, Ali urged them to take things step by step. \\\"Go for it, just go for it. I think maybe talk to your parents first, and just tell them Mum, Dad, this is what I want to do, I want to box, I want to dance, I want to act, or whatever she wants to do. \\\"Tell them, you know what? Its OK what I'm doing, I'm not going to be going out of my boundaries and doing bad things, I'm going to stick to my limits and stick to my religion, it's not harming anyone. \\\"My parents would say, if you're happy, we're happy. I think anyone's parents would say that wouldn't they? \\\"The first step is trying it and opening that door. Once you can open it an inch you can open it a mile.\\\"\"\n",
-    "    human_str = \" \\\"No Guts, No Heart, No Glory\\\" is a play by Common Wealth Theatre that tells the true story of Muslim female boxers The performance was partly inspired by former UK national champion Ambreen Sadiq who experienced bullying and discrimination \\\"We want to give them a voice and give them a reason, so they know they can have confidence\\\" says cast member Freyaa Ali about girls in boxing\"\n",
+    "    article_str = \"Twitter is on the verge of its initial public offering and everyone's knickers have been in a knot all week over the company's lack of management diversity -- that is, women. As The New York Times put it last week, \\\"The board? All white men. The investors? All men. The executive officers? All men but for the general counsel, Vijaya Gadde, who has had the job for five weeks.\\\" Question: Why is this a problem? First, there aren't enough women at Twitter or in the tech world because there aren't enough women anywhere. Some facts: Women make up 6% of chief executives at the leading 100 tech companies, and that has taken years to accomplish. Most startups have all-male boards. In 2012 women held 16.6% of Fortune 500 board seats. Women of color were 3.3% of the total. Fully one-tenth had no women serving on their boards at all. In the past five years, women and minorities have lost ground despite evidence strongly suggesting that gender parity and board diversity have positive effects on profitability. Twitter had more than a year to prepare for this IPO: Where are the women? The company's immediate response focused on a \\\"paucity of candidates.\\\" The tech industry has a well-documented pipeline problem, one largely the result of gender stereotypes that reach into the educational system. However, companies regularly draw executives from outside their own industries -- sometimes, yes, even women -- when seeking senior-level and board positions. It enables them to cross-pollinate ideas, diversify their expertise and innovate. For example, Apple has hired Burberry CEO Angela Ahrendts. During her tenure at Burberry, the company doubled its revenues and tripled its share price. Companies redefine \\\"pipeline\\\" every day -- particularly when profits are involved. The technology sector dresses itself up as progressive when in reality it shows every indication of being, at its core, powerfully retrograde. Despite investing in diversity programs, the management of tech firms is distinctly not diverse, and indeed the industry continues to \\\"dazzle\\\" with incidents in which men gleefully display their not even implicit biases. Last month's Titshare debacle (click and weep), as well as Business Insider's long-overdue firing of CTO Pax Dickinson (who'd for years been churning out such sexist, racist, tweets as \\\"Jesus gets raped by a pack of n****s. It's his own fault for dressing like a whore though\\\") are two recent examples. Second, sexism is seamlessly coupled with the distribution of capital. Bryan Goldberg's September launch of Bustle, a \\\"women's centric\\\" website (\\\"world news and politics alongside beauty tips\\\") was a blunt force case in point. After announcing the site with a tone-deaf post, Goldberg was widely mocked for his personal failure to grasp, among other things, how ridiculous his claim to be starting the \\\"first site of its kind\\\" for women was. The real issue isn't Goldberg's cluelessness, but the institutional biases that enabled him to raise $6.5 million when far more able, knowledgeable and experienced women can't. Companies with at least one woman founder make up only 13% of those funded. Venture capitalists are less likely to invest in startups if there are women involved in their management; investors actively reduce holdings in companies that appoint female directors. These are particular ironies since women-run startups use 40% less capital to launch. These facts don't reflect women lacking in confidence ideas. They illustrate discrimination, whether it is conscious or not. Third, while we think of Twitter as a tech company, it is a media company and part of a larger environment that does little to correct its failure at diversity. Year after year, studies such as one last week from the Directors Guild of America, as well as reports from Who Makes the News and the Women's Media Center Status on Women in Media document exactly how distorted mainstream media ownership, management and production remain. Only online is the situation improving. But even there the difference is largely gains in women-oriented \\\"pink-collar\\\" content. How can we separate these facts from ownership? We can't. As reported by the Federal Communications Commission, our media are almost entirely owned and managed by white men. Lastly, what does this have to do with speech? Everything. Male experiences, interests, expectations and voices, mainly white, inform the way we think, decide how our resources are dispersed and define our norms. The ghettoized status of women and minorities in media and technology, coupled with the lack of venture capital investments, means that our attempts to express ourselves are limited, misrepresented and regularly repackaged to make what we say palatable to a sexist status quo. And this status quo is entirely uninterested in the idea of women as capable, autonomous leaders who might change norms in unsettling, risky ways. Stating these facts baldly is not an indictment of white men as individuals. It is a description of systemic problems that we refuse to confront with systemic solutions. The presence of a carefully selected handful of women in tech, regardless of how determined, able and prominently visible they are, has for decades done little to alter the makeup of management and ownership. Gender diversity at Twitter, as elsewhere, isn't a priority because people make reasonable decisions about what they believe will be profitable and successful: Twitter is looking for experience and expertise within a comfort zone. \\\"This to me is not a gender issue, it's an innovation issue,\\\" Twitter CEO Dick Costolo has explained. Gender issues aren't innovation issues only if your gender is dominant and the norm. This rationale, and others like it, are exactly the kind of \\\"1,000 paper cuts\\\" marginalization that result in fewer women pursuing tech careers to begin with. Twitter is one part of a male dominated social structure, economy and culture, all of which rely on cradle-to-grave sexism to be profitable. That's tweetable by the way.\"\n",
+    "    human_str = \" Soraya Chemaly: Twitter, on verge of IPO, is under fire with leadership that's virtually all men She says it reflects larger dearth of women in tech, media fields -- 6% of tech CEOs are women She says sexism abounds in male-dominated field and guides investment, leaving women out Chemaly: Controlling women's access makes men keepers of speech, keeps sexist status quo\"\n",
     "    article = nlp(article_str)  \n",
     "    human = nlp(human_str)\n",
     "    \n",
@@ -249,11 +241,10 @@
     "                'inputPos': article_token.pos_,\n",
     "                'weight': weights[human_index][article_index]\n",
     "            }\n",
-    "            \n",
-    "\n",
+    "                \n",
     "            output.append(record)\n",
-    "            \n",
-    "    with open('/Users/haldenl/nlpcapstone/data/human_data_{0}.json'.format(k), 'w') as out:\n",
+    "    \n",
+    "    with open('/Users/haldenl/nlpcapstone/data/hierarchical_similarity_data_{0}.json'.format(k), 'w') as out:\n",
     "        json.dump(output, out, indent=2)\n",
     "        "
    ]
