--- a/data/process_data.ipynb
+++ b/data/process_data.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,8 +85,8 @@
     "            \n",
     "        output = {\n",
     "            'attentionRecords': attentionRecords,\n",
-    "            'inputText': inputRecords,\n",
-    "            'outputText': outputRecords\n",
+    "            'inputTokens': inputRecords,\n",
+    "            'outputTokens': outputRecords\n",
     "        }\n",
     "\n",
     "        with open('/Users/haldenl/nlpcapstone/data/{0}_data_{1}.json'.format(out_prefix, k), 'w') as out:\n",
