--- a/data/process_human.ipynb
+++ b/data/process_human.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,36 +217,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for k, example in enumerate(data[:1]):\n",
-    "    article_str = \"Twitter is on the verge of its initial public offering and everyone's knickers have been in a knot all week over the company's lack of management diversity -- that is, women. As The New York Times put it last week, \\\"The board? All white men. The investors? All men. The executive officers? All men but for the general counsel, Vijaya Gadde, who has had the job for five weeks.\\\" Question: Why is this a problem? First, there aren't enough women at Twitter or in the tech world because there aren't enough women anywhere. Some facts: Women make up 6% of chief executives at the leading 100 tech companies, and that has taken years to accomplish. Most startups have all-male boards. In 2012 women held 16.6% of Fortune 500 board seats. Women of color were 3.3% of the total. Fully one-tenth had no women serving on their boards at all. In the past five years, women and minorities have lost ground despite evidence strongly suggesting that gender parity and board diversity have positive effects on profitability. Twitter had more than a year to prepare for this IPO: Where are the women? The company's immediate response focused on a \\\"paucity of candidates.\\\" The tech industry has a well-documented pipeline problem, one largely the result of gender stereotypes that reach into the educational system. However, companies regularly draw executives from outside their own industries -- sometimes, yes, even women -- when seeking senior-level and board positions. It enables them to cross-pollinate ideas, diversify their expertise and innovate. For example, Apple has hired Burberry CEO Angela Ahrendts. During her tenure at Burberry, the company doubled its revenues and tripled its share price. Companies redefine \\\"pipeline\\\" every day -- particularly when profits are involved. The technology sector dresses itself up as progressive when in reality it shows every indication of being, at its core, powerfully retrograde. Despite investing in diversity programs, the management of tech firms is distinctly not diverse, and indeed the industry continues to \\\"dazzle\\\" with incidents in which men gleefully display their not even implicit biases. Last month's Titshare debacle (click and weep), as well as Business Insider's long-overdue firing of CTO Pax Dickinson (who'd for years been churning out such sexist, racist, tweets as \\\"Jesus gets raped by a pack of n****s. It's his own fault for dressing like a whore though\\\") are two recent examples. Second, sexism is seamlessly coupled with the distribution of capital. Bryan Goldberg's September launch of Bustle, a \\\"women's centric\\\" website (\\\"world news and politics alongside beauty tips\\\") was a blunt force case in point. After announcing the site with a tone-deaf post, Goldberg was widely mocked for his personal failure to grasp, among other things, how ridiculous his claim to be starting the \\\"first site of its kind\\\" for women was. The real issue isn't Goldberg's cluelessness, but the institutional biases that enabled him to raise $6.5 million when far more able, knowledgeable and experienced women can't. Companies with at least one woman founder make up only 13% of those funded. Venture capitalists are less likely to invest in startups if there are women involved in their management; investors actively reduce holdings in companies that appoint female directors. These are particular ironies since women-run startups use 40% less capital to launch. These facts don't reflect women lacking in confidence ideas. They illustrate discrimination, whether it is conscious or not. Third, while we think of Twitter as a tech company, it is a media company and part of a larger environment that does little to correct its failure at diversity. Year after year, studies such as one last week from the Directors Guild of America, as well as reports from Who Makes the News and the Women's Media Center Status on Women in Media document exactly how distorted mainstream media ownership, management and production remain. Only online is the situation improving. But even there the difference is largely gains in women-oriented \\\"pink-collar\\\" content. How can we separate these facts from ownership? We can't. As reported by the Federal Communications Commission, our media are almost entirely owned and managed by white men. Lastly, what does this have to do with speech? Everything. Male experiences, interests, expectations and voices, mainly white, inform the way we think, decide how our resources are dispersed and define our norms. The ghettoized status of women and minorities in media and technology, coupled with the lack of venture capital investments, means that our attempts to express ourselves are limited, misrepresented and regularly repackaged to make what we say palatable to a sexist status quo. And this status quo is entirely uninterested in the idea of women as capable, autonomous leaders who might change norms in unsettling, risky ways. Stating these facts baldly is not an indictment of white men as individuals. It is a description of systemic problems that we refuse to confront with systemic solutions. The presence of a carefully selected handful of women in tech, regardless of how determined, able and prominently visible they are, has for decades done little to alter the makeup of management and ownership. Gender diversity at Twitter, as elsewhere, isn't a priority because people make reasonable decisions about what they believe will be profitable and successful: Twitter is looking for experience and expertise within a comfort zone. \\\"This to me is not a gender issue, it's an innovation issue,\\\" Twitter CEO Dick Costolo has explained. Gender issues aren't innovation issues only if your gender is dominant and the norm. This rationale, and others like it, are exactly the kind of \\\"1,000 paper cuts\\\" marginalization that result in fewer women pursuing tech careers to begin with. Twitter is one part of a male dominated social structure, economy and culture, all of which rely on cradle-to-grave sexism to be profitable. That's tweetable by the way.\"\n",
-    "    human_str = \" Soraya Chemaly: Twitter, on verge of IPO, is under fire with leadership that's virtually all men She says it reflects larger dearth of women in tech, media fields -- 6% of tech CEOs are women She says sexism abounds in male-dominated field and guides investment, leaving women out Chemaly: Controlling women's access makes men keepers of speech, keeps sexist status quo\"\n",
-    "    article = nlp(article_str)  \n",
-    "    human = nlp(human_str)\n",
-    "    \n",
-    "    weights = getWeights(article, human)\n",
+    "article_str=\"It's complicated, but there I was in a Sandals resort in Grenada, not with my wife Gillian but with my best friend from university, Charlotte Metcalf. By coincidence we had pitched up together to review the 14th in the Sandals chain. Neither of us had been before, but Couples Only? Weddings on the beach? Charlotte and I, both hard-bitten travellers, were set to sneer. Sandals La Source has 225 suites spread over three ‘villages’ in a small sandy bay. On arrival Ritchie, the manager, tells me his philosophy is ‘to give guests more than they expect’, and at first glance it’s hard to tell who’s happier – the 350 guests or the 500 staff. Certainly everyone appears to be grinning constantly, as if part of a cult - the Sandalistas. Among Sandals LaSource Grenada's 225 suites is the Skypool, with this stunning private infinity pool The three 'village' luxury all-inclusive resort hosts 350 guests with 500 staff Our personal butlers, trained by the Guild of Professional English Butlers, take us to our (separate) rooms. Charlotte’s giant suite features a black marble bath and a terrace with plunge pool and Jacuzzi. Meanwhile, I follow my butler, Marcus, up to my Oceanview Skypool Penthouse. Marcus hands me a mobile telephone and says: ‘Anything you need, I’m a phone call away.’ From my private infinity pool, I look out over the fort, and reflect on what I know about Grenada. It is mountainous, measuring just 12 miles by 21, with a population of 110,000, a high level of literacy and land ownership, and one of the lowest crime figures in the Caribbean. The island’s recent peaceful history has emerged from two tempests. One was a natural phenomenon, Hurricane Ivan, that struck in September 2004 and destroyed 85 per cent of houses and vegetation, including Grenada’s precious nutmeg trees. Sandals La Source is situated on a sandy bay on mountainous Grenada, an island just 12 by 21 miles Among the resort's shared facilities is three freshwater swimming pools including this in the 'Pink Gin' village The second was political: the 1983 Marxist coup in which Prime Minister Maurice Bishop was killed – a move that prompted Ronald Reagan to land 6,000 US troops on what was part of the Commonwealth. My father was a Foreign Office diplomat at the time, and he recalls meeting the Queen shortly after the invasion. She was furious. Charlotte and I find the scale of the resort overwhelming. There are nine restaurants, several bars, and even an English pub. After some fishing, during which I catch and release a 200lb blue marlin, I land an audience with the island’s popular Prime Minister. Dr Keith Mitchell greets us barefoot at his official residence, where we chat about Grenada’s future as an eco-tourist centre and its current peace and stability, which he ascribes to his people’s inherently cheerful nature. The Sandals resort occupies the heart of Grenada's exclusive Pink Gin Beach Writer Nicholas Shakespeare enjoys a pedalo ride with his friend Charlotte Metcalf The South Seas Butler Suite's living room opens up to a trellised veranda with a private plunge pool Back at La Source, Charlotte and I attend a beach ‘Re-Tie The Knot’ ceremony. Two couples, from Halifax and Leicester, both married for more than 20 years, arrive for a moving service conducted with palpable delight by Baptist pastor Stanford Simon, looking splendid in lime-green linen. Sandals (0800 597 0002) offers seven nights at Sandals LaSource Grenada Resort & Spa from £1,629pp. This includes Luxury Included (all-inclusive) accommodation in a South Seas Hideaway Junior Suite with Balcony Tranquility Soaking Tub, return flights from London and resort transfers. Valid for travel between September 1 and October 20, 2015. There are tears of joy as well as laughter as Karen and Jenny, both in full-length cream and carrying white orchids, walk up the jetty to a small pavilion hanging over the sea to repledge their love to husbands Phil and Kieron respectively. The staff are in white waistcoats and ties for the occasion. The couples have prepared statements to read to each other, giving thanks for the love and lives they share. It is the simplest, most genuine and therefore the most profoundly moving service I’ve been to… well, since my own wedding. Charlotte and I weep openly. Sandals is victorious – cynicism is slain.\"\n",
+    "human_str=\"Sandals La Source in Grenada has 225 suites spread over three ‘villages’ Personal butlers are trained by the Guild of Professional English Butlers The resort in a small sandy bay has 500 staff tending to its 350 guests\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "article = nlp(article_str)  \n",
+    "human = nlp(human_str)\n",
+    "\n",
+    "weights = getWeights(article, human)\n",
+    "\n",
+    "attentionRecords = []\n",
+    "inputRecords = []\n",
+    "outputRecords = []\n",
+    "\n",
+    "for human_index, human_token in enumerate(human):\n",
+    "    for article_index, article_token in enumerate(article):\n",
     "        \n",
-    "    output = []\n",
-    "    for human_index, human_token in enumerate(human):\n",
-    "        for article_index, article_token in enumerate(article):\n",
-    "            record = {\n",
-    "                'outputIndex': human_index,\n",
-    "                'outputToken': human_token.text,\n",
-    "                'outputPos': human_token.pos_,\n",
-    "                'inputIndex': article_index,\n",
-    "                'inputToken': article_token.text,\n",
-    "                'inputPos': article_token.pos_,\n",
-    "                'weight': weights[human_index][article_index]\n",
-    "            }\n",
+    "        attn_weight = weights[human_index][article_index]\n",
     "                \n",
-    "            output.append(record)\n",
+    "        attentionRecords.append({\n",
+    "            'inputIndex': article_index,\n",
+    "            'outputIndex': human_index,\n",
+    "            'weight': attn_weight\n",
+    "        })\n",
+    "        \n",
+    "for human_index, human_token in enumerate(human):\n",
+    "    outputRecords.append({\n",
+    "        'index': human_index,\n",
+    "        'token': human_token.text\n",
+    "    })\n",
     "    \n",
-    "    with open('/Users/haldenl/nlpcapstone/data/hierarchical_similarity_data_{0}.json'.format(k), 'w') as out:\n",
-    "        json.dump(output, out, indent=2)\n",
-    "        "
+    "for article_index, article_token in enumerate(article):\n",
+    "    inputRecords.append({\n",
+    "        'index': article_index,\n",
+    "        'token': article_token.text\n",
+    "    })\n",
+    "            \n",
+    "output = {\n",
+    "    'attentionRecords': attentionRecords,\n",
+    "    'inputTokens': inputRecords,\n",
+    "    'outputTokens': outputRecords\n",
+    "}\n",
+    "\n",
+    "with open('/Users/haldenl/nlpcapstone/data/hierarchical_similarity_data_{0}.json'.format(0), 'w') as out:\n",
+    "    json.dump(output, out, indent=2)\n"
    ]
   },
   {
