--- a/data/process_data.ipynb
+++ b/data/process_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,18 +38,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-16-04fc733dfc13>, line 30)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-04fc733dfc13>\"\u001b[0;36m, line \u001b[0;32m30\u001b[0m\n\u001b[0;31m    inputRecords.append({\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "\n",
@@ -79,7 +70,7 @@
     "                })\n",
     "                \n",
     "        for i, input_token in enumerate(input_list):\n",
-    "            if (i >= len(attn_dist)):\n",
+    "            if (i >= len(attn_dist[0])):\n",
     "                break\n",
     "                \n",
     "            inputRecords.append({\n",
@@ -89,6 +80,9 @@
     "            })\n",
     "            \n",
     "        for i, output_token in enumerate(output_list):\n",
+    "            if (i >= len(attn_dist)):\n",
+    "                break\n",
+    "                \n",
     "            outputRecords.append({\n",
     "                'index': i,\n",
     "                'token': output_token.text,\n",
