--- a/data/process_human.ipynb
+++ b/data/process_human.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
     "            similarity = h_sent.similarity(a_sent)\n",
     "            sentence_similarities[human_index][article_index] = similarity\n",
     "        \n",
-    "    sentence_similarities = softmax(sentence_similarities, theta=20, axis=1)\n",
+    "    sentence_similarities = softmax(sentence_similarities, theta=100, axis=1)\n",
     "    return sentence_similarities\n",
     "    "
    ]
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,17 +217,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "article_str=\"It's complicated, but there I was in a Sandals resort in Grenada, not with my wife Gillian but with my best friend from university, Charlotte Metcalf. By coincidence we had pitched up together to review the 14th in the Sandals chain. Neither of us had been before, but Couples Only? Weddings on the beach? Charlotte and I, both hard-bitten travellers, were set to sneer. Sandals La Source has 225 suites spread over three ‘villages’ in a small sandy bay. On arrival Ritchie, the manager, tells me his philosophy is ‘to give guests more than they expect’, and at first glance it’s hard to tell who’s happier – the 350 guests or the 500 staff. Certainly everyone appears to be grinning constantly, as if part of a cult - the Sandalistas. Among Sandals LaSource Grenada's 225 suites is the Skypool, with this stunning private infinity pool The three 'village' luxury all-inclusive resort hosts 350 guests with 500 staff Our personal butlers, trained by the Guild of Professional English Butlers, take us to our (separate) rooms. Charlotte’s giant suite features a black marble bath and a terrace with plunge pool and Jacuzzi. Meanwhile, I follow my butler, Marcus, up to my Oceanview Skypool Penthouse. Marcus hands me a mobile telephone and says: ‘Anything you need, I’m a phone call away.’ From my private infinity pool, I look out over the fort, and reflect on what I know about Grenada. It is mountainous, measuring just 12 miles by 21, with a population of 110,000, a high level of literacy and land ownership, and one of the lowest crime figures in the Caribbean. The island’s recent peaceful history has emerged from two tempests. One was a natural phenomenon, Hurricane Ivan, that struck in September 2004 and destroyed 85 per cent of houses and vegetation, including Grenada’s precious nutmeg trees. Sandals La Source is situated on a sandy bay on mountainous Grenada, an island just 12 by 21 miles Among the resort's shared facilities is three freshwater swimming pools including this in the 'Pink Gin' village The second was political: the 1983 Marxist coup in which Prime Minister Maurice Bishop was killed – a move that prompted Ronald Reagan to land 6,000 US troops on what was part of the Commonwealth. My father was a Foreign Office diplomat at the time, and he recalls meeting the Queen shortly after the invasion. She was furious. Charlotte and I find the scale of the resort overwhelming. There are nine restaurants, several bars, and even an English pub. After some fishing, during which I catch and release a 200lb blue marlin, I land an audience with the island’s popular Prime Minister. Dr Keith Mitchell greets us barefoot at his official residence, where we chat about Grenada’s future as an eco-tourist centre and its current peace and stability, which he ascribes to his people’s inherently cheerful nature. The Sandals resort occupies the heart of Grenada's exclusive Pink Gin Beach Writer Nicholas Shakespeare enjoys a pedalo ride with his friend Charlotte Metcalf The South Seas Butler Suite's living room opens up to a trellised veranda with a private plunge pool Back at La Source, Charlotte and I attend a beach ‘Re-Tie The Knot’ ceremony. Two couples, from Halifax and Leicester, both married for more than 20 years, arrive for a moving service conducted with palpable delight by Baptist pastor Stanford Simon, looking splendid in lime-green linen. Sandals (0800 597 0002) offers seven nights at Sandals LaSource Grenada Resort & Spa from £1,629pp. This includes Luxury Included (all-inclusive) accommodation in a South Seas Hideaway Junior Suite with Balcony Tranquility Soaking Tub, return flights from London and resort transfers. Valid for travel between September 1 and October 20, 2015. There are tears of joy as well as laughter as Karen and Jenny, both in full-length cream and carrying white orchids, walk up the jetty to a small pavilion hanging over the sea to repledge their love to husbands Phil and Kieron respectively. The staff are in white waistcoats and ties for the occasion. The couples have prepared statements to read to each other, giving thanks for the love and lives they share. It is the simplest, most genuine and therefore the most profoundly moving service I’ve been to… well, since my own wedding. Charlotte and I weep openly. Sandals is victorious – cynicism is slain.\"\n",
-    "human_str=\"Sandals La Source in Grenada has 225 suites spread over three ‘villages’ Personal butlers are trained by the Guild of Professional English Butlers The resort in a small sandy bay has 500 staff tending to its 350 guests\""
+    "article_str=\"A super slimmer who swelled to 26 stone after eating a loaf of bread a day is now toasting her diet - and literally becoming half the woman she used to be. Michelle Quinn, 42, ballooned after munching her way through toast, sarnies and slices of bread all day. Her diet used to be made up of white toast with margarine for breakfast, sandwiches and crisps for lunch and fish and chips and takeaways for dinner. Michelle Quinn has lost half of her body weight after ditching her bread-based diet which saw her eat a loaf a day, she has also dropped from a clothes size 30 (left) to a size 12 (right) Before losing weight 43-year-old Michelle was a size 30, here she proudly holds up a pair of her old trousers But she gave up the bread and started a diet of breakfast of cereal or fruit and yoghurt, home-made soup for lunch and healthy versions of her favourite meals. Michelle, of South Shields, Tyneside, says she feels like a new woman after losing 12.5st and dropping from dress size 30 to size 12. She has been named Slimming World's Greatest Loser in the West Harton area of South Shields. She said: 'I feel like a new woman since losing weight. In fact, I look so different that people who I havent seen for a while often can't believe I'm the same person. 'For me though it's the change on the inside that's been the biggest - I'm happier, healthier and much more confident now. Michelle, pictured with her uncle Derek, joined a slimming group in 2013 in a bid to shift the weight, she says she had struggled with high blood pressure, back pain and that she got breathless easily Michelle was not fat as a child but piled on the pounds thanks to her diet of fish and chips and sandwhiches Now a size 12, Michelle no longer feels the need to eat a whole loaf of bread every day She continued: 'I still enjoy all my favourite meals like burgers and chips and roast dinners but I've learned how to make small changes like using lean meat or cooking with low calorie spray instead of oil or butter. 'It fits in really well with the rest of my family and we can all eat the same meals.' Michelle weighed 25st 3lbs when she joined the group in April 2013 and has since dropped to 12st 10lbs. She said: 'Before I lost the weight I hid behind a big bubbly personality. I'd pretend it didn't bother me that I was bigger than most other people, but that was far from the truth. 'I hated shopping for clothes and found just climbing up stairs and doing simple everyday tasks would leave me tired and out of breath.' Michelle's weight was also putting a huge strain on her health and she suffered with high blood pressure, chronic back pain and got breathless easily.\"\n",
+    "human_str=\"Michelle Quinn ballooned thanks to her addiction to bread and chips The 42-year-old would eat a whole loaf of bread a day In 2013 she weighed more than 25st and was a size 30 dress size After joining a slimming group her weight has dropped to 12 stone 10lbs\"\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,6 +236,8 @@
     "human = nlp(human_str)\n",
     "\n",
     "weights = getWeights(article, human)\n",
+    "\n",
+    "print(weights)\n",
     "\n",
     "attentionRecords = []\n",
     "inputRecords = []\n",
