--- a/data/process_human.ipynb
+++ b/data/process_human.ipynb
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -7470,7 +7470,7 @@
     "    'outputTokens': outputRecords\n",
     "}\n",
     "\n",
-    "with open('/Users/haldenl/nlpcapstone/data/hierarchical_similarity_data_{0}.json'.format(0), 'w') as out:\n",
+    "with open('/Users/haldenl/nlpcapstone/data/hierarchical_similarity_data_{0}.json'.format('michelle'), 'w') as out:\n",
     "    json.dump(output, out, indent=2)\n"
    ]
   },
